syntax = "proto3";

package voter.voter.v1;

import "amino/amino.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "voter/voter/v1/params.proto";

option go_package = "voter/x/voter/types";

// Query defines the gRPC querier service.
service Query {
  // Parameters queries the parameters of the module.
  rpc Params(QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/voter/voter/v1/params";
  }

  // ShowPoll Queries a list of ShowPoll items.
  rpc ShowPoll(QueryShowPollRequest) returns (QueryShowPollResponse) {
    option (google.api.http).get = "/voter/voter/v1/show_poll/{poll_id}";
  }
}

// QueryParamsRequest is request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is response type for the Query/Params RPC method.
message QueryParamsResponse {
  // params holds all the parameters of this module.
  Params params = 1 [
    (gogoproto.nullable) = false,
    (amino.dont_omitempty) = true
  ];
}

// QueryShowPollRequest defines the QueryShowPollRequest message.
message QueryShowPollRequest {
  uint64 poll_id = 1;
}

// QueryShowPollResponse defines the QueryShowPollResponse message.
message QueryShowPollResponse {
  string create = 1;
  string id = 2;
  string title = 3;
  string options = 4;
}
